--- a/java2020f/withdraw.html
+++ b/java2020f/withdraw.html
@@ -17,8 +17,7 @@
           <p class="name-amount">名前</p>
           <input class="textfield" type="text" name="name"/>
           <p class="name-amount">金額</p>
-          <input class="amountfield textfield" type="text" name="amount"/>
-          
+          <input class="amountfield textfield" type="text" name="amount"/
           <input type="submit"  name="cmd"  value="OK"/>
           <input type="submit"  name="cmd"  value="CANCEL"/>
         </form>
